feat: added example with jquery

--- a/dom-bom/index.html
+++ b/dom-bom/index.html
@@ -23,6 +23,6 @@
         <tbody id="tbody">
         </tbody>
     </table>
-    <script src="index.js"></script>    
+    <script src="bundle.js"></script>    
 </body>
 </html>
