Add location map

--- a/dom-bom/index.html
+++ b/dom-bom/index.html
@@ -23,6 +23,11 @@
         <tbody id="tbody">
         </tbody>
     </table>
-    <script src="index.js"></script>    
+    <div id='map'></div>
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.1/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.1/mapbox-gl.css' rel='stylesheet' />
+    <script src='https://tiles.unwiredmaps.com/v2/js/unwired-gl.js?v=0.1.6'></script>
+    <link href='https://tiles.unwiredmaps.com/v2/js/unwired-gl.css?v=0.1.6' rel='stylesheet' />
+    <script src="index.js"></script>
 </body>
 </html>
